--- a/Android/build.properties
+++ b/Android/build.properties
@@ -1,4 +1,5 @@
-titanium.platform=/Users/benjamin/Library/Application Support/Titanium/mobilesdk/osx/3.2.0.GA/android
-android.platform=/Users/benjamin/Android/sdk/platforms/android-15
-google.apis=/Users/benjamin/Android/sdk/add-ons/addon-google_apis-google-15
-android.ndk=/Users/benjamin/Android/ndk/
+titanium.platform=${env.TITANIUM_HOME}/android
+android.platform=${env.ANDROID_SDK}/platforms/android-15
+google.apis=${env.ANDROID_SDK}/add-ons/addon-google_apis-google-15
+android.ndk=${env.ANDROID_NDK}
+ndk.path=${env.ANDROID_NDK}
