--- a/Android/build.xml
+++ b/Android/build.xml
@@ -4,6 +4,7 @@
 	</description>
 
 	<property name="ti.module.root" location="${basedir}"/>
+	<property environment="env" />
 	<property file="build.properties" />
 
 	<import file="${titanium.platform}/../module/android/build.xml"/>
